--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="boking.html">Booking</a></li>
+        <li><a href="booking.html">booking</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="help.html">helpe</a>
         
@@ -25,6 +25,7 @@
             <p><strong>Student ID:</strong>C1240192</p>
             <p><strong>Department:</strong>Faculty of computer & IT</p>
             <p><strong>Universaty:</strong>Jamhuuriya Universaty of science &technology</p>
+        
         </section>
     </main>
 <footer class="footer">
