--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="booking.html">Booking</a></li>
+        <li><a href="booking.html">booking</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="help.html">help</a></li>
         
